src/styles/utils/_mixins.scss
@mixin desktop {
	@media screen and (min-width: 1024px) {
			@content;
	}
}

@mixin container {
	width: 90%;
	margin: 0 auto;
	flex-grow: 1;
}

@mixin section {
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 2.4rem;
}

@mixin titlePage {
	color: $titleColor;
	text-align: center;
	font-family: var(--font-primary);
	font-size: 2rem;
	font-style: normal;
	font-weight: 700;
	line-height: normal;
}

@mixin btnAction {
	border-radius: .4rem;
	border: 0;
	padding: 1.6rem 2.4rem;
	background: $btnColor;
	color: #FFF;
	font-family: var(--font-primary);
	font-size: 1.6rem;
	font-style: normal;
	font-weight: 700;
	line-height: normal;
	width: 100%;
	cursor: pointer;
	display: inline-block;

	@include desktop {
		width: fit-content;
	}

	&:hover {
		background: $btnHoverColor;
		transition: .1s;
	}
}

@mixin visuallyHidden {
	position: absolute;
	width: 1px;
	height: 1px;
	overflow: hidden;
	clip: rect(1px 1px 1px 1px); /* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
	clip: rect(1px, 1px, 1px, 1px); /*maybe deprecated but we need to support legacy browsers */
	clip-path: inset(50%); /*modern browsers, clip-path works inwards from each corner*/
	white-space: nowrap;
}

